admission/ValidatingAdmissionPolicy/policies/hostusers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-hostusers.security.kolteq.com/audit: 'false-true'
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: hostusers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-hostusers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/warn: 'false-true'
    check-hostusers.security.kolteq.com/audit: 'false-true'
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostusers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-hostusers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    check-hostusers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostusers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-hostusers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/audit: 'false-true'
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    check-hostusers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostusers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-hostusers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-hostusers.security.kolteq.com/audit: 'false-true'
    check-hostusers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostusers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-hostusers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostusers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ef824444-e21d-5f0c-8b9e-58ae3fba230b
  labels:
    check-hostusers.security.kolteq.com/enforce: 'false-true'
    check-hostusers.security.kolteq.com/audit: 'false-true'
    check-hostusers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: hostusers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-hostusers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
