admission/ValidatingAdmissionPolicy/policies/hostusers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: hostusers
  annotations:
    security.kubeapt.io/displayName: "Hostusers"
    security.kubeapt.io/description: "Using hostUsers is disallowed. spec.hostUsers must be undefined or set to false."
    security.kubeapt.io/resource: "Pods"
    security.kubeapt.io/severity: "10"
    security.kubeapt.io/remediation: "Set spec.hostUsers=false or omit it. Fields: spec.hostUsers."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      !has(object.spec.hostUsers) || object.spec.hostUsers == false
    message: |
      Using hostUsers is disallowed. spec.hostUsers must be undefined or set to false.
